# DjangoTemplateProject

./: .gitignore  pyproject.toml
conf/: settings.py  urls.py
